samples/_failures_safe/1761451441_16e9b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98909827.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_98909827.c:151:12: error: missing terminating " character
  151 |     printf("Warning count:
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_98909827.c:151:5: error: expected expression at end of input
  151 |     printf("Warning count:
      |     ^~~~~~
./samples/SAFE/__tmp_98909827.c:151:5: error: expected declaration or statement at end of input
